	  #2967138 ES defaults to the app folder for saving png and shp in Win
		ES expects the patch dir to be writable -- even if Exult does not -- and
		defaults to this for all file browsing operations (except for creation
		of new games).
	* Implemented feature requests:
	  #2967398 Show which sfx pack is used in stdout
	  #2967397 Gump for selecting SFX pack

2010-03-10 Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation and FAQ with the changed default path values and other things.

2010-03-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Applied patches:
	  #2965885 Export a palette and import it to GIMP without an editing
	* all: Changed default path values again; Dominus has been documenting them.
	  Made MacOS X look both in bundle and in external <DATA> tags for data.
	  Improved detection code for waves: if wave packs are found, appropriate to
	  the game, they are added to exult.cfg and used. Exult will now always
	  search for blackgate, forgeofvirtue, serpentisle and silverseed, even if
	  there are other games defined in exult.cfg.
	* Fixed bugs:
	  #2967402 OSX: ES is defaulting to wrong path for EXULT_DATADIR

2010-03-09 Dominik Reichardt <dominus@users.sourceforge.net>
	* makfile.common, audio/midid_drivers/*: added CoreMIDI driver for using a real MT32 on OS X
	* README, /docs/*:updated Documentation with CoreMIDI information

2010-03-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* autogen.sh: Changed == (which is a bashism) into = for test.
	* shapes/glshape.*: Fixed MacOS X PPC compilation error.
	* gamemgr/*: Games in exult.cfg without a <path> or a <static_path> tags now
	  default to $prefix/share/exult/gamename in *nix and MacOS X (where $prefix
	  is /usr/share or /usr/local/share, depending on ./configure options).

2010-03-08 Dominik Reichardt <dominus@users.sourceforge.net>
	* README, /docs/*: updated Documentation, fixed the xml makefile to do proper cases